# StreamingService

./: .txt  Dockerfile  docker-compose.yaml  pyproject.toml  render.yaml  requirements.txt
media/tracks/2022/12/06/: pillowtalk.jfif  this_town.jfif
streaming/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
streaming/migrations/: 0001_initial.py  0002_alter_abstractusers_username.py  0003_remove_abstractusers_first_name_and_more.py
streaming/static/streaming/css/: styles.css  track_styles.css
streaming/static/streaming/js/: register.js  script.js  track_js.js
streaming/templates/streaming/: albums.html  artists.html  base.html  create.html  delete.html  detail_album.html  detail_track.html  index.html  login.html  playlists.html  register.html  tracks.html
streaming_service/: settings.py  urls.py
