[tool.poetry]
name = "streaming-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "streaming_service"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.3"
psycopg2 = "^2.9.5"
pillow = "^9.3.0"
django-bootstrap3 = "^22.2"
dj-database-url = "^1.2.0"
whitenoise = {extras = ["brotli"], version = "^6.3.0"}
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
